--- a/roles/wm/tasks/main.yml
+++ b/roles/wm/tasks/main.yml
@@ -1,4 +1,58 @@
 ---
+- name: Setup base packages
+  become: true
+  apt: pkg={{ item }}
+  with_items:
+    - libxcb1-dev
+    - libxcb-keysyms1-dev
+    - libpango1.0-dev
+    - libxcb-util0-dev
+    - libxcb-icccm4-dev
+    - libyajl-dev
+    - libstartup-notification0-dev
+    - libxcb-randr0-dev
+    - libev-dev
+    - libxcb-cursor-dev
+    - libxcb-xinerama0-dev
+    - libxcb-xkb-dev
+    - libxkbcommon-dev
+    - libxkbcommon-x11-dev
+    - autoconf
+    - libxcb-xrm0
+    - libxcb-xrm-dev
+    - automake
+
+- name: Get gaps repo
+  git:
+    repo: https://www.github.com/Airblader/i3
+    dest: /tmp/i3
+
+- name: build i3 conf
+  shell: autoreconf --force --install
+  args:
+    chdir: /tmp/i3
+
+- name: create i3 gaps build dir
+  file:
+    path: /tmp/i3/build
+    state: directory
+
+- name: configure i3
+  shell: ../configure --prefix=/usr --sysconfdir=/etc --disable-sanitizers
+  args:
+    chdir: /tmp/i3/build
+
+- name: make i3
+  shell: make
+  args:
+    chdir: /tmp/i3/build
+
+- name: install i3
+  become: true
+  shell: make install
+  args:
+    chdir: /tmp/i3/build
+
 - name: create i3 config dir
   file:
     path: ~/.config/i3
