Apply some lessons learned from doing this on my macbook

--- a/roles/secrets/tasks/main.yml
+++ b/roles/secrets/tasks/main.yml
@@ -1,14 +1,15 @@
 ---
-- name: copy SSH keys
-  copy: src=~/.ssh/{{ item }} dest=~/.ssh mode=0600
-  with_items:
-    - id_rsa
-    - id_rsa.pub
-    - id_rsa.heroku
-    - id_rsa.heroku.pub
-    - id_rsa.ck-machine
-    - id_rsa.ck-machine.pub
-    - config
+- name: create .ssh dir
+  file:
+    dest: ~/.ssh
+    mode: 0700
+    state: directory
 
-- name: copy secrets file
-  copy: src=~/.secrets dest=~/.secrets mode=0600
+- name: copy SSH keys
+  copy:
+    src: "{{ lookup('env', 'SECRETS_DIR') }}"
+    dest: ~/
+    mode: 0600
+
+    #- name: copy secrets file
+    #copy: src=~/.secrets dest=~/.secrets mode=0600
