--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -34,9 +34,8 @@
   shell: curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 - name: Change shell to zsh
-  become: true
   user:
-    name: vagrant
+    name: "{{ lookup('env', 'USER') }}"
     shell: /bin/zsh
 
 - name: clone thoughtbot's dotfiles
