--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -34,6 +34,7 @@
   shell: curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 - name: Change shell to zsh
+  become: true
   user:
     name: "{{ lookup('env', 'USER') }}"
     shell: /bin/zsh
