Actually copy secrets file

--- a/roles/secrets/tasks/main.yml
+++ b/roles/secrets/tasks/main.yml
@@ -11,5 +11,5 @@
     dest: ~/
     mode: 0600
 
-    #- name: copy secrets file
-    #copy: src=~/.secrets dest=~/.secrets mode=0600
+- name: copy secrets file
+  copy: src=~/.secrets dest=~/.secrets mode=0600
