--- a/roles/wm/tasks/main.yml
+++ b/roles/wm/tasks/main.yml
@@ -3,6 +3,13 @@
 - include: i3-gaps.yml
 - include: polybar.yml
 
+- name: Install post-i3 packages
+  become: true
+  apt: pkg={{ item }}
+  with_items:
+    - i3lock
+    - xautolock
+
 - name: remove lightdm.conf file to not autologin with unity
   become: true
   file:
