--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,32 +3,19 @@
   become: true
   apt: pkg={{ item }}
   with_items:
+    - build-essential
     - vim
     - git
     - ntp
     - tmux
-    - feh
-    - numlockx
-    - rofi
-    - fonts-font-awesome
-    - fonts-inconsolata
     - htop
     - silversearcher-ag
     - tig
     - zsh
     - ntp
-    - dunst
-    - redshift-gtk
     - curl
-    - rxvt-unicode-256color
     - ansible
-    - kde-spectacle
-
-- name: Setup libraries
-  become: true
-  apt: pkg={{ item }}
-  with_items:
-    - libmpdclient2
+    - awscli
 
 - name: Install vim-plug
   shell: curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
@@ -48,7 +35,6 @@
   git:
     repo: 'https://github.com/gammons/dotfiles-local.git'
     dest: ~/dotfiles-local
-    version: i3-stuff
 
 - name: add RCM key
   become: true
