--- a/cron-container.yml
+++ b/cron-container.yml
@@ -1,7 +1,10 @@
 - name: Set up the cron container
   hosts: all
   remote_user: grant
+  vars:
+    static_ip: 192.168.1.201
   roles:
+    - static-ip
     - base
     - ruby
     - cron-container
