--- a/ssh-landing.yml
+++ b/ssh-landing.yml
@@ -1,5 +1,8 @@
 - name: Set up ssh landing
   hosts: all
   remote_user: grant
+  vars:
+    static_ip: 192.168.1.200
   roles:
+    - static-ip
     - base
