--- a/mail.yml
+++ b/mail.yml
@@ -1,7 +1,7 @@
 - name: Set up mail instance
   hosts: mail
-  remote_user: ubuntu
+  remote_user: grant
   gather_facts: true
   roles:
-    - mail-server
+    - base
 
