--- a/roles/wm/tasks/polybar.yml
+++ b/roles/wm/tasks/polybar.yml
@@ -1,11 +1,41 @@
-- name: get polybar deb file
-  get_url:
-    url: http://archive.getdeb.net/ubuntu/pool/apps/p/polybar/polybar_3.0.5-1~getdeb1_amd64.deb
-    dest: /tmp/polybar.deb
+---
+- name: Setup packages
+  become: true
+  apt: pkg={{ item }}
+  with_items:
+    - build-essential
+    - cmake
+    - cmake-data
+    - pkg-config
+    - libcairo2-dev
+    - libxcb1-dev
+    - libxcb-util0-dev
+    - libxcb-randr0-dev
+    - libxcb-composite0-dev
+    - python-xcbgen
+    - xcb-proto
+    - libxcb-image0-dev
+    - libxcb-ewmh-dev
+    - libxcb-icccm4-dev
+
+- name: Get polybar repo
+  git:
+    repo: https://github.com/jaagr/polybar
+    version: 3.2
+    dest: /tmp/polybar
+
+- name: make polybar build dir
+  file:
+    path: /tmp/polybar/build
+    state: directory
+
+- name: make polybar
+  shell: cmake ..
+  args:
+    chdir: /tmp/polybar/build
 
 - name: install polybar
   become: true
-  apt:
-    deb: /tmp/polybar.deb
-
-
+  shell: make install
+  args:
+    chdir: /tmp/polybar/build
