fs inotify watches

--- a/roles/dev/tasks/main.yml
+++ b/roles/dev/tasks/main.yml
@@ -39,3 +39,7 @@
   apt:
     name: yarn
     state: present
+
+- name: increase number of fs inotify watches
+  become: true
+  shell: echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf && sysctl -p
