final stuff for setting up mail server

--- a/roles/mail-server/tasks/user.yml
+++ b/roles/mail-server/tasks/user.yml
@@ -3,6 +3,7 @@
   become: true
   user:
     name: grant
+    password: "{{ lookup('env','GRANT_PASSWORD') }}"
     shell: /bin/bash
     append: yes
     groups: sudo
