--- a/roles/arch-base/tasks/main.yml
+++ b/roles/arch-base/tasks/main.yml
@@ -6,7 +6,7 @@
     - base-devel
     - vim
     - git
-    - nt
+    - ntp
     - tmux
     - htop
     - the_silver_searcher
@@ -34,3 +34,19 @@
   git:
     repo: 'https://github.com/gammons/dotfiles-local.git'
     dest: ~/dotfiles-local
+
+- name: add RCM
+  shell: yay -S --noconfirm rcm
+
+- name: run rcup for first time
+  shell: env RCRC=$HOME/dotfiles/rcrc rcup
+  async: 30
+  poll: 0
+
+- name: install base16-shell
+  git:
+    repo: https://github.com/chriskempson/base16-shell.git
+    dest: ~/.config/base16-shell
+
+- name: add fzf
+  shell: yay -S --noconfirm fzf
