--- a/roles/arch-base/tasks/main.yml
+++ b/roles/arch-base/tasks/main.yml
@@ -55,11 +55,11 @@
 - name: add fzf
   shell: yay -S --noconfirm fzf
 
-- name: Get grant public key
-  become: true
-  get_url:
-    owner: grant
-    group: grant
-    url: https://github.com/gammons.keys
-    dest: /home/grant/.ssh/authorized_keys
-    mode: 0600
+# - name: Get grant public key
+#   become: true
+#   get_url:
+#     owner: grant
+#     group: grant
+#     url: https://github.com/gammons.keys
+#     dest: /home/grant/.ssh/id_rsa.pub
+#     mode: 0600
