--- a/roles/arch-base/tasks/main.yml
+++ b/roles/arch-base/tasks/main.yml
@@ -19,6 +19,8 @@
     - ntp
     - curl
     - aws-cli
+    - snapper
+    - btrbk
 
 - name: Install vim-plug
   shell: curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
