--- a/roles/arch-wm/tasks/main.yml
+++ b/roles/arch-wm/tasks/main.yml
@@ -18,7 +18,6 @@
     - feh
     - numlockx
     - rofi
-    - ttf-font-awesome
     - ttf-inconsolata
     - dunst
     - plasma5-applets-redshift-control
@@ -27,11 +26,13 @@
     - network-manager-applet
     - ttf-dejavu
     - ttf-ubuntu-font-family
+    - ttf-font-awesome
+    - awesome-terminal-fonts
+    - noto-fonts-emoji
     - tlp
     - powerline
     - pulseaudio
     - alsa-utils
-    - awesome-terminal-fonts
     - cpupower
     - playerctl
 
