--- a/roles/pi-hole/tasks/main.yml
+++ b/roles/pi-hole/tasks/main.yml
@@ -1,14 +1,9 @@
 ---
-- name: create /etc/pihole dir
-  become: true
-  file: path=/etc/pihole state=directory
+- name: get the install script
+  get_url:
+    url: https://github.com/pi-hole/docker-pi-hole/blob/master/docker_run.sh
+    dest: docker_run.sh
+    mode: 0744
 
-- name: set up setupVars.conf
-  become: true
-  copy:
-    src: setupVars.conf
-    dest: /etc/pihole/setupVars.conf
-
-- name: install pi-hole unattended
-  become: true
-  shell: curl -L https://install.pi-hole.net | sudo bash /dev/stdin --unattended
+- name: run the install script
+  shell: ./docker_run.sh
