--- a/roles/syncthing/files/syncthing.service
+++ b/roles/syncthing/files/syncthing.service
@@ -3,6 +3,7 @@ Description=Syncthing - Open Source Continuous File Synchronization
 Documentation=man:syncthing(1)
 
 [Service]
+User=%i
 ExecStart=/usr/bin/syncthing -no-restart -logflags=0
 Restart=on-failure
 SuccessExitStatus=3 4
