--- a/roles/syncthing/tasks/main.yml
+++ b/roles/syncthing/tasks/main.yml
@@ -1,29 +1,3 @@
 ---
-- name: add the syncthing apt key
-  become: true
-  apt_key:
-    url: https://syncthing.net/release-key.txt
-    state: present
-
-- name: add the syncthing apt repo
-  become: true
-  apt_repository:
-    repo: deb https://apt.syncthing.net/ syncthing stable
-    state: present
-
-- name: install syncthing
-  become: true
-  apt:
-    name: syncthing
-    state: present
-
-- name: install the syncthing systemd service
-  copy:
-    src: syncthing.service
-    dest: ~/.config/systemd/user/syncthing.service
-
-- name: register the syncthing systemd service
-  shell: systemctl --user enable syncthing.service
-
-- name: start the syncthing service
-  shell: systemctl --user start syncthing.service
+- include: syncthing.yml
+- include: restic.yml
