I don't need reports

--- a/roles/local-mail-server/files/rspamd/local.d/dmarc.conf
+++ b/roles/local-mail-server/files/rspamd/local.d/dmarc.conf
@@ -9,7 +9,7 @@ actions = {
 
 # From Rspamd 1.6 experimental support for generation of DMARC reports is provided.
 # send_reports MUST be true
-send_reports = true;
+send_reports = false;
 
 # report_settings MUST be present
 report_settings {
