use docker.service

--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -41,3 +41,6 @@
     name: kubernetes-cni
     state: present
 
+- name: enable docker.service
+  become: true
+  shell: systemctl enable docker.service
