--- a/roles/arch-base/tasks/main.yml
+++ b/roles/arch-base/tasks/main.yml
@@ -8,7 +8,7 @@
   pacman: name={{ item }}
   with_items:
     - base-devel
-    - vim
+    - neovim
     - git
     - ntp
     - tmux
@@ -20,10 +20,11 @@
     - curl
     - aws-cli
     - throttled
+    - starship-bin
     - fd
 
 - name: Install vim-plug
-  shell: curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+  shell: curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 - name: Change shell to zsh
   become: true
