--- a/roles/arch-wm/tasks/main.yml
+++ b/roles/arch-wm/tasks/main.yml
@@ -42,6 +42,7 @@
     - xscreensaver
     - alacritty
     - maim
+    - gnome-keyring
 
 - name: add fzf
   shell: yay -S --noconfirm fzf polybar ttf-weather-icons slack-desktop zoom picom kubectl-bin kubernetes-helm-git minikube-bin networkmanager-openvpn networkmanager-strongswan nmap remmina spotify steam google-chrome-beta i3-gnome kubectl-bin kubernetes-helm mysql-clients57 powder-toy starship-bin stripe-cli
