--- a/roles/arch-base/tasks/main.yml
+++ b/roles/arch-base/tasks/main.yml
@@ -5,23 +5,25 @@
 
 - name: Setup base packages
   become: true
-  pacman: name={{ item }}
-  with_items:
-    - base-devel
-    - neovim
-    - git
-    - ntp
-    - tmux
-    - htop
-    - the_silver_searcher
-    - tig
-    - zsh
-    - ntp
-    - curl
-    - aws-cli
-    - throttled
-    - starship-bin
-    - fd
+  pacman:
+    name:
+      - base-devel
+      - zsh
+      - neovim
+      - git
+      - ntp
+      - tmux
+      - htop
+      - the_silver_searcher
+      - tig
+      - zsh
+      - ntp
+      - curl
+      - aws-cli
+      - throttled
+      - fd
+      - go
+      - starship
 
 - name: Install vim-plug
   shell: curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
@@ -32,15 +34,18 @@
     name: "{{ lookup('env', 'USER') }}"
     shell: /bin/zsh
 
-- name: clone thoughtbot's dotfiles
-  git:
-    repo: https://github.com/gammons/dotfiles.git
-    dest: ~/dotfiles
-
 - name: clone my dotfiles
   git:
     repo: 'https://github.com/gammons/dotfiles-local.git'
-    dest: ~/dotfiles-local
+    dest: ~/.dotfiles
+
+- name: clone yay
+  git:
+    repo: 'https://aur.archlinux.org/yay.git'
+    dest: /tmp/yay
+
+- name: install yay
+  shell: cd /tmp/yay && makepkg -si --noconfirm
 
 - name: add RCM
   shell: yay -S --noconfirm rcm
@@ -57,6 +62,12 @@
 
 - name: add fzf
   shell: yay -S --noconfirm fzf
+
+- name: Create SSH directory
+  ansible.builtin.file:
+    path: ~/.ssh
+    state: directory
+    mode: '0600'
 
 - name: Get grant public key
   become: true
