further updates to make it aweesome

--- a/arch-dev-machine.yml
+++ b/arch-dev-machine.yml
@@ -3,6 +3,8 @@
   connection: local
   roles:
     - arch-base
+    # include arch-home if bootstrapping a brand new home directory
+    - arch-home
     - arch-dev
     - laptop
     - arch-wm
