add noto fonts for correct google chrome rendering

--- a/roles/arch-wm/tasks/main.yml
+++ b/roles/arch-wm/tasks/main.yml
@@ -26,6 +26,7 @@
       - ttf-hack
       - ttf-inconsolata
       - ttf-roboto-mono
+      - noto-fonts
       - powerline
       - awesome-terminal-fonts
       - noto-fonts-emoji
